--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Scrim-s03i8nc",
+  "name": "Scrim-s085scnl23",
   "description": "https://v2.scrimba.com/learn-javascript-c0v/~0t",
   "scripts": {
     "start": "vite",
